--- a/Polytopia/index.css
+++ b/Polytopia/index.css
@@ -1,3 +1,47 @@
-body {
-    background: red;
+/*imports*/
+@import url('https://fonts.googleapis.com/css?family=Roboto|Quicksand');
+
+
+/*styling*/
+body{
+    background-color: #eeeeee;
+}
+t {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
+.br {
+    width: 100%;
+    border-top: 3px #0000ff solid;
+    float: left;
+}
+canvas{
+    width: 700px;
+    height: 700px;
+    border: solid #000000 1px;
+    float: left;
+}
+.center{
+    text-align: center;
+}
+a{
+    text-decoration: none;
+}
+.left{
+    text-indent: 15px;
+    text-align: left;
+}
+p{
+    font-family: 'Quicksand', sans-serif;
+    float: left;
+}
+.adsl{
+    width: calc(50% - 351px);
+    height: 100%;
+    float: left;
+}
+.adsr{
+    width: calc(50% - 351px);
+    height: 100%;
+    float: right;
 }
