--- a/Polytopia/index.css
+++ b/Polytopia/index.css
@@ -10,6 +10,11 @@ t {
     text-align: center;
     font-family: 'Roboto', sans-serif;
 }
+t > h1{
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+}
 .br {
     width: 100%;
     border-top: 3px #0000ff solid;
@@ -20,6 +25,7 @@ canvas{
     height: 700px;
     border: solid #000000 1px;
     float: left;
+    background: white;
 }
 .center{
     text-align: center;
