--- a/3d Engine Test/index.css
+++ b/3d Engine Test/index.css
@@ -3,5 +3,13 @@
     transform: scaleY(-1);
 }
 #s{
-    text-align: center;
+    float: left;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+}
+#stats{
+    float: left;
+    margin-left: 30px;
+    transform: translateX(1000px);
 }
